# ChangeLog

0.7.2 (2023-10-11)
    * Add an automatic PrusaLink image builder script
    * Add multi-instance documentation
    * Telemetry improvement
    * Attempt to turn the RPi wifi power management off in the images
    * Stop showing the tune menu after connecting to the printer

0.7.1rc1 (2023-08-10)
    * Fixed HTTP response status on HEAD request for non-existing files
    * Attribute ro renamed to read_only
    * Fix printer returning to READY instead of IDLE
    * Respect the X-Forwarded-Prefix header in Wizard
    * Add focus support for the v4l2 cameras
    * Add a multi-instance web waypoint, use a reverse proxy to navigate to the correct instances
    * Automatically redirect from the multi-instance waypoint if exactly one printer is configured
    * Fix missing error detail pages
    * Fix an error when dosconnecting from a cammera that failed to connect
    * Fix an intermittent error that was killing instances for like two years
    * Differentiate between multi instance printers by showing the printer number on the LCD screen
    * Static Web update
        - Fix behavior on SD card ejection
        - Add simple camera focus control if supported
        - Add default value for connect hostname
        - Update translations
        - Add tooltips for error status texts in telemetry
        - Add confirmation modal to overwrite a file by upload
        - Fix undefined printer states displaying
        - Hide zero temperatures in telemetry
        - Add support to be running behind the proxy
        - Fix folder deletion button
        - Fix prusa connect port handling in URL builder
    * Hold the STOPPED and FINISHED state for at least 11s
    * Fix MK2(.5)S SN being broken on multi-instance images
    * Implemented UPGRADE high lvl Connect command

0.7.0 (2023-05-19)
    * Fixed printer sends info about api key change to Connect after change
    * Added the network error beep setting to the web API