@@ -6,6 +6,7 @@
     * Telemetry improvement
     * Attempt to turn the RPi wifi power management off in the images
     * Stop showing the tune menu after connecting to the printer
+    * Use the 2023-10-10 Raspberry Pi OS base image for the image builder
 
 0.7.1rc1 (2023-08-10)
     * Fixed HTTP response status on HEAD request for non-existing files
